--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,26 +6,30 @@
     <title>Login</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-info">
     <div class="container">
-        <h2>Login</h2>
-        <% if(errorMessage) { %>
-            <p class="text-danger"><%= errorMessage %></p>
-        <% } %>
-        <form action="/login" method="POST">
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" required>
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-6"> 
+                <div class="border rounded p-4 bg-light"> 
+                    <h2 class="text-center">Login</h2>
+                    <% if(errorMessage) { %>
+                        <p class="text-danger"><%= errorMessage %></p>
+                    <% } %>
+                    <form action="/login" method="POST">
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password:</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+                    </form>
+                    <p class="mt-3">Não tem conta? <a href="/register">Cadastre aqui</a>.</p>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">entrar</button>
-        </form>
-        <form action="/register" method="GET">
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
-        </form>
+        </div>
     </div>
 </body>
 </html>
